--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,8 @@
     "group:typescript-eslintMonorepo"
   ],
   "lockFileMaintenance": {
-    "enabled": true
+    "enabled": true,
+    "skipInstalls": false
   },
   "packageRules": [
     {
